anna pushing most recent round of edits

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -9,7 +9,7 @@
 
 \begin{titlepage}
 
-\title{\Large \textbf{The Life Cycle Benefits of an Influential Early Childhood Intervention}\thanks{This research was supported in part by the American Bar Foundation; the Pritzker Children's Initiative, the Buffett Early Childhood Fund, National Institutes of Health grants NICHD R37HD065072, NICHD R01HD54702, NIA R24AG048081, P30AG024968, an anonymous funder, Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education funded by the Hymen Milgrom Supporting Organization, and the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. Collaboration with Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger on adapting the Future America Model is gratefully acknowledged. For helpful comments, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, Azeem Shaikh, Matthew Tauzer, and Ed Vytlacil. For information on the implementation of the Carolina Abecedarian Project and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The Web Appendix for this paper can be found at \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{The Life-cycle Benefits of an Influential Early Childhood Intervention}\thanks{This research was supported in part by the American Bar Foundation; the Pritzker Children's Initiative, the Buffett Early Childhood Fund, National Institutes of Health grants NICHD R37HD065072, NICHD R01HD54702, NIA R24AG048081, P30AG024968, an anonymous funder, Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education funded by the Hymen Milgrom Supporting Organization, and the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. Collaboration with Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger on adapting the Future America Model is gratefully acknowledged. For helpful comments, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, Azeem Shaikh, Matthew Tauzer, and Ed Vytlacil. For information on the implementation of the Carolina Abecedarian Project and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The Web Appendix for this paper can be found at \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -136,9 +136,9 @@ This paper documents the diverse array of life-cycle benefits of an influential 
 
 This analysis contributes to a growing literature on the benefits of early interventions for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of long-term followup data, many studies of early childhood interventions report outcomes at early ages. Moreover, they use only a limited set of outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2014_EvaluatingPublicPrograms} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits across multiple domains of life achievement that are relevant to policy analysis.
 
-We present an array of \emph{long-term} benefits from two virtually identical early childhood interventions implemented in North Carolina and evaluated using random assignment. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. They were launched in the early 1970s and have long-term follow-ups through age 34. We analyze their impacts on a variety of life-relevant outcomes such as health, the quality of life, participation in crime, earnings, IQ, schooling, and the increase in mother's employment arising from program subsidies to childcare.
+We present an array of \emph{long-term} benefits from two virtually identical early childhood interventions implemented in North Carolina and evaluated using random assignment. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. They were launched in the early 1970s and have long-term follow-ups through age 34. The program started early (at 8 weeks) and engaged participants to age 5. We analyze their impacts on a variety of life-relevant outcomes such as health, the quality of life, participation in crime, earnings, IQ, schooling, and the increase in mother's employment arising from program subsidies to childcare.
 
-The program starts early (at 8 weeks) and engages participants to age 5. Evidence from these programs is relevant for today's policy discussions because their main features are present in a variety of programs currently in place around the world.\footnote{Programs inspired by ABC/CARE have been (and are being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on ABC/CARE. The names of the programs with years launched and locations in parentheses are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} The population targeted by the program still exists: roughly 19\% of all African-American children would be eligible for the program today.\footnote{43\% of African American children were eligible in 1972 \citep{Garcia_2016_National-Implementation-ECI}.}
+Evidence from these programs is relevant for today's policy discussions because their main features are present in a variety of programs currently in place around the world.\footnote{Programs inspired by ABC/CARE have been (and are being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on ABC/CARE. The names of the programs with years launched and locations in parentheses are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} The population targeted by the program still exists: roughly 19\% of all African-American children would be eligible for the program today.\footnote{43\% of African American children were eligible in 1972 \citep{Garcia_2016_National-Implementation-ECI}.}
 
 Summarizing the benefits of a program with a diverse array of outcomes across many domains and periods of life is both challenging and rewarding. Doing so highlights the numerous channels through which early childhood programs enhance capabilities. We use a variety of methodologies to characterize program benefits. Instead of just reporting individual treatment effects by category, our cost/benefit analysis accounts for all program components, including the welfare cost of taxes to publicly finance these programs.\footnote{\cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} present a cost/benefit analysis for ABC for outcomes through age 21, before many benefits are realized. They report a benefit/cost ratio of 2.5, but give no standard error or sensitivity analysis for their estimate. They do not disaggregate by gender. For want of the data collected on health at age 34, they do not account for health benefits. They use self-reported crime data (unlike the administrative crime data later collected that we analyze) and ignore the welfare costs of financing the program. We use cost data from primary sources not available to them.}
 
@@ -179,7 +179,7 @@ ABC recruited four cohorts of children born between 1972 and 1976. CARE recruite
 
 As detailed in Table~\ref{tab:programcomparison}, the design and implementation of both ABC and CARE were similar. ABC had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to either a treatment group that received center-based childcare or a control group. The second phase of treatment consisted of academic support from ages 5 through 8. CARE consisted of two treatment phases that were very similar to those of ABC. The first phase of CARE, also lasting from birth until age 5, contained an additional arm of treatment that involved family education. This arm was designed to study the effects of improving the home environment on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}
 
-In our analysis, we pool the treatment group in CARE that received the center-based ABC curriculum with the ABC treatment group. We do not use the CARE treatment group that only received family education.\footnote{\citet{ABCCARE_Dataset} show that there is no effect of the CARE family education component alone.} We only consider the intervention through age 5.\footnote{The second-phase treatment of ABC had no effects. See \citealp{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.}
+In our analysis, we pool the treatment group in CARE that received the center-based ABC curriculum with the ABC treatment group. We do not use the CARE treatment group that only received family education.\footnote{\citet{ABCCARE_Dataset} show that there is no effect of the CARE family education component alone.} We only consider the intervention through age 5.\footnote{The second-phase treatment of ABC/CARE had no effects \citep{ABCCARE_Dataset}.}
 
 \begin{table}[htbp]
 \centering
@@ -220,19 +220,18 @@ Most of these alternative preschools received federal subsidies and were federal
 
 \begin{subfigure}[h]{0.7\textwidth}
 	\centering
-	\caption{Fraction of Months in Alternative Preschool} \label{fig:proportion-alt-pre}
+	\caption{Fraction of Months in Alternative Preschool Conditional on Enrollment} \label{fig:proportion-alt-pre}
 		\includegraphics[width=\textwidth]{output/abccare_Vfractimes.eps}
-\footnotesize
-\justify
-Note: Panel (a) displays the cumulative density function of enrollment in alternative preschools of the ABC/CARE control group. Panel (b) displays the fraction of children in the ABC/CARE control group enrolled in alternative preschool during the fraction of months from ages 0 to 5 (conditional on ever being enrolled) in the $x$-axis.
 \end{subfigure}
+\footnotesize \justify
+Note: Panel (a) displays the cumulative density function of enrollment in alternative preschools of the ABC/CARE control group. Panel (b) displays the fraction of children in the ABC/CARE control group enrolled in alternative preschool during the fraction of months from ages 0 to 5 (conditional on ever being enrolled) in the $x$-axis.
 \end{figure}
 
 \subsection{Program Costs} \label{section:programscosts}
 
 Costs are a fundamental component to the benefit/cost ratio and the internal rate of return. We improve on previous estimates of the costs by using primary-source documentation.\footnote{These are progress reports written by the principal investigators and related documentation recovered in the archives of the research center where the program was implemented. We display these sources in Appendix \ref{app:programcosts}.}
 
-Table~\ref{tab:totalcosts} breaks down costs by different categories for a year of treatment. We obtain the personnel wages from the primary sources we show in Appendix \ref{app:programcosts} and include the type of personnel based on conversations with the programs' staff. We adjust wages upward by 15\% to account for fringe benefits. The costs we label as ``other'' arise from nutrition and services that the subjects received when they were sick, diapers during the first 15 months of their lives, and transportation to the center.\footnote{The control children also received diapers during approximately 15 months, and iron-fortified formula. We assume that this generated a cost that amounts to half of the ``other'' category for the first 15 months of their lives.} The costs are based on sources describing ABC treatment for $52$ children.\footnote{We use the same costs estimates for CARE, for which information is less available.} The costs exclude any expenses related to research or policy analysis.\footnote{Our calculation of the costs per year in 1979 USD is $\$295,239$. An independent calculation of the program as implemented indicates that the yearly cost of the program was $\$275,475$  (1979 USD).}
+Table~\ref{tab:totalcosts} breaks down costs by different categories for a year of treatment. We obtain the personnel wages from the primary sources we show in Appendix \ref{app:programcosts} and include the type of personnel based on conversations with the programs' staff. We adjust wages upward by 15\% to account for fringe benefits. The costs we label as ``other'' arise from nutrition and services that the subjects received when they were sick, diapers during the first 15 months of their lives, and transportation to the center.\footnote{The control children also received diapers during approximately 15 months, and iron-fortified formula. We assume that this generated a cost that amounts to half of the ``other'' category for the first 15 months of their lives.} The costs are based on sources describing ABC treatment for $52$ children.\footnote{We use the same costs estimates for CARE, for which information is less available.} The costs exclude any expenses related to research or policy analysis.\footnote{Our calculation of the costs per year in 1979 USD is $\$295,239$. A separate calculation of the program as implemented indicates that the yearly cost of the program was $\$275,475$ (1979 USD). See Appendix \ref{app:programcosts}.}
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -268,7 +267,7 @@ Note: This table details the non-experimental data sources we use to interpolate
 \subsection{Sample Size}
 
 Findings from ABC/CARE have been criticized given the programs' small sample size.\footnote{See Charles Murray's commentary in \citep
-{Heckman_2013_BOOKGivingkidsfair}.} However, results from \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show that asymptotic inference is valid in the ABC sample given that the results are similar to those obtained from small-sample methods. Combining the ABC sample with that of CARE should similarly be valid. For this reason, we do not use small-sample inference, such as permutation testing.
+{Heckman_2013_BOOKGivingkidsfair}.} An extensive analysis by \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and permutation-based inference, specifically suited for small-sample inference, agree to great extent for the ABC sample. We consider an even bigger sample than \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} by including CARE. For this reason, we do not use small-sample inference, such as permutation testing.\footnote{For interested readers, we are able to provide treatment effects based on permutation testing.}
 
 \textbf{[JJH: Need to discuss small sample issue. Cite Murray -- commenting on my book ``Give Kids'' (his comment in book).] [Typist: See below.]}
 
@@ -296,7 +295,6 @@ Y_C^0 \left( t \right) &= Y_C^0.
 \begin{equation}
 Y^0 : = \left( 1 - V \right) Y_H^0 + \left( V \right) Y_C^0.
 \end{equation}
-This allows us to answer policy-relevant questions. Likewise, we write the outcome when the child is fixed to treatment status as $Y^1$.
 
 There are two possible approaches to treat $V$. The first is to simplify $V$ as binary, where $V = 0$ or $V  > 0$. The second is to allow for multiple values of $V$ (let $V$ be continuous in the limit). While the continuous approach would allow us to construct the counterfactual $Y_C^0 \left( V \right)$ specific to a realization of $V \in [0,1]$, it is problematic in the context of the small number of observations in ABC/CARE. The binary approach still allows us to define policy-relevant parameters. Under this approach, we can frame the parental decision in a standard Roy-type setting in which\footnote{We present estimates for different versions of this Roy model in Appendix~\ref{appendix:amethodology}.}
 
@@ -305,7 +303,7 @@ There are two possible approaches to treat $V$. The first is to simplify $V$ as 
 \label{eq:noutility}
 \end{equation}
 
-We focus on simpler parameters that we can directly use in the cost-benefit analysis. The first parameter of interest relates to the following question: what is the effect of the program as implemented? That is, what is the effect of the program without fixing the parental decision to enroll the subject in alternative preschool? Importantly, this parameter does not speak to the effectiveness of the program by itself. Instead, it speaks to the effectiveness of the program relative to the supply of alternatives preschools that was in place when the program was implemented. The parameter is:
+We focus on simple parameters that we can directly use in the cost-benefit analysis. The first parameter of interest relates to the following question: what is the effect of the program as implemented? That is, what is the effect of the program without fixing the parental decision to enroll the subject in alternative preschool? Importantly, this parameter does not speak to the effectiveness of the program by itself. Instead, it speaks to the effectiveness of the program relative to the supply of alternatives preschools that was in place when the program was implemented. The parameter is:
 
 \begin{equation}
 \Delta := \mathbb{E} \left[ Y^1 -  \max \left\{ Y_{H}^0,  Y_{C}^0 \right\} | D =1 \right]. \label{eq:mainest}
@@ -470,7 +468,7 @@ The first level of each model predicts the likelihood that the subject incurred 
 
 \subsection{Treatment Effects} \label{section:teresults}
 
-We present an overview of treatment effects in Table~\ref{resultsfemales} and Table~\ref{resultsmales}. Appendix~\ref{appendix:results} displays an extensive summary of the estimates for the \noutcomes\ outcomes we consider. We select these outcomes because we consider them of economic interest.\footnote{Appendix~\ref{appendix:results} displays results accounting for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat} and \citet{Romano_Shaikh_2006_AnnStat}. We do not lose significance in the main outcomes driving the cost/benefit analysis.}
+We present an overview of treatment effects in Table~\ref{resultsfemales} and Table~\ref{resultsmales}. Appendix~\ref{appendix:results} displays an extensive summary. We select these outcomes because we consider them of economic interest.\footnote{Appendix~\ref{appendix:results} displays results accounting for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat} and \citet{Romano_Shaikh_2006_AnnStat}. We do not lose significance in the main outcomes driving the cost/benefit analysis.}
 
 The results for females indicate an increase in employment, which strengthens when comparing to the females who did not receive alternative preschool. Females in the treatment group were more likely to graduate from high school and receive more years of education than those in the control group. These education results are robust even after fixing the take-up of alternative preschool. 
 
@@ -591,7 +589,7 @@ Parental income and crime are the components for which the internal rate of retu
 
 The estimates are robust to individually removing the rest of the components, and in most cases remain statistically significant. This happens for one of either two reasons: (i) the effects are substantial but they are heavily discounted because they happen later in life---e.g. labor income; or (ii) the effects happen early in life but are not as substantial---as in the amount that the control-group parents pay for their children to attend alternative preschools.
 
-Next, we analyze the estimates when splitting the sample by males and females. Some of the estimates lose significance due to the reduction of observations after splitting the sample by gender. The point estimates remain robust across  the sensitivity analysis. For females, we observe consistency except for the case where we remove the parental income component. We can observe that the female sample is the main driver of parental income when comparing its net present value between females and males. For males, the estimates are robust, similar to the female sample.
+Next, we analyze the estimates when splitting the sample by males and females. Some of the estimates lose significance due to the reduction of observations after splitting the sample by gender. The point estimates remain robust across  the sensitivity analysis (see Table~\ref{table:cba}), which computes the benefit/cost ratio and the internal rate of return when removing a component. For females, we observe consistency except for the case where we remove the parental income component. We can observe that the female sample is the main driver of parental income when comparing its net present value between females and males. For males, the estimates are robust, similar to the female sample.
 
 \begin{table}[H]
 \centering
