anna changed reference to interpolation of parental income

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -362,7 +362,7 @@ We provide inference on this count of positive treatment effects as well as the 
 
 \subsection{Forecasting and Monetizing Life-cycle Costs and Benefits} \label{section:cbamethodology}
 
-\noindent In this section, we explain our strategy to interpolate and extrapolate the life-cycle costs and benefits of education, labor income, crime, and health.\footnote{The methodology for doing this exercise for parental and public-transfer income is analogous to that of labor income so we suppress the description for brevity.} More methodological and practical details are in Appendix~\ref{appendix:methodology}, in which we also explain a solution for cases of attrition when forecasting. 
+\noindent In this section, we explain our strategy to interpolate and extrapolate the life-cycle costs and benefits of education, labor income, crime, and health.\footnote{The methodology for doing this exercise for public-transfer income is analogous to that of labor income so we suppress the description for brevity.} More methodological and practical details are in Appendix~\ref{appendix:methodology}, in which we also explain a solution for cases of attrition when forecasting. 
 
 \subsubsection{Education}
 
